@@ -1,3 +1,8 @@
+2009-01-04  Jonathan Pryor  <jpryor@novell.com>
+
+	* IEnumerableTest.cs: bnc#400716 has been fixed in r122358, so enable 
+	  these tests.
+
 2008-12-26  Jonathan Pryor  <jpryor@novell.com>
 
 	* DelegateTest.cs: Update tests for .Timings().
